first try with figure 2

--- a/figure_scripts/figure_1.rmd/figure_1.rmd
+++ b/figure_scripts/figure_1.rmd/figure_1.rmd
@@ -11,7 +11,7 @@ use_python("/home/nealpsmith/.conda/envs/sc_analysis/bin/python")
 First, we need to aggregate the matrices and assess the data quality.  Here we use Pegasus to create a count matrix and to
 calcluate some quality-control statistics (% mitochondrial UMIs, number of genes per cell).  From there, we can plot
 these statistics to determine the proper cutoffs to define the quality cells.  Based on the distributions, we chose to include
-cells with < 30% mitochondrial reads and > 500 genes. test.
+cells with < 30% mitochondrial reads and > 500 genes.
 
 ```{python message=FALSE}
 import pegasus as pg
@@ -45,7 +45,7 @@ _ = plt.ylabel("percent mitochondrial UMIs")
 
 ```
 
-Next we log-normalized the data, selected highly variable features and performed PCA
+Next we log-normalized the data, selected highly variable features and performed PCA.
 ```{python process_data, message=FALSE, results = FALSE}
 pg.filter_data(all_data)
 pg.log_norm(all_data)
@@ -82,6 +82,7 @@ figure = sc.pl.umap(harmonized_data, color = lin_genes,
 figure.set_size_inches(10, 7)
 
 ```
+
 Using all of this info (along with other DEG info), we can assign the clusters to our major lineages.
 ```{python lineage_umap}
 cell_clust_dict = {
