--- a/figure_scripts/figure_2.rmd/figure_2.rmd
+++ b/figure_scripts/figure_2.rmd/figure_2.rmd
@@ -15,7 +15,7 @@ AA and ANA and look for DEGs among the T cells.**
 First, we isolated just the T cells from our original data object.  NK cells were segregated and removed.  Next, we
 wanted to determine the optimal number of clusters for our T cells.
 
-```{python rand_func}
+```{python rand_func, message=FALSE}
 import pegasus as pg
 import numpy as np
 import pandas as pd
@@ -23,8 +23,6 @@ import concurrent.futures
 from sklearn.metrics.cluster import adjusted_rand_score
 import random
 import time
-import logging
-logger = logging.getLogger(__name__)
 import leidenalg
 import concurrent.futures
 import os
@@ -76,9 +74,6 @@ def leiden(W, resolution, random_state=0):
 
     end = time.perf_counter()
     n_clusters = len(set(labels))
-    logger.info(f"Finished leiden clustering for res = {resolution}. Get {n_clusters} clusters. "
-                f"Time spent = {end-start:.2f}s.")
-
     return pd.Series(labels)
 
 def _collect_samples(W, resolution, n_cells, resamp_size, true_class, random_state=0):
@@ -90,8 +85,7 @@ def _collect_samples(W, resolution, n_cells, resamp_size, true_class, random_sta
 
 ```
 
-
-```{python rand_plot}
+```{python, rand_plot}
 import matplotlib.pyplot as plt
 import seaborn as sns
 
@@ -145,9 +139,6 @@ First we can look at marker genes by AUROC.  The motivation here is to determine
 are good classifiers for cluster membership.  These stats were calculated using the Pegasus ```de_analysis``` function.
 
 ```{python DE_analysis}
-# pd.set_option("display.max_columns", 10)
-# pd.set_option("display.max_rows", 25)
-
 # pg.de_analysis(t_cell_harmonized, cluster = "leiden_labels", auc = True,
 #                n_jobs = len(set(t_cell_harmonized.obs["leiden_labels"])))
 
@@ -162,7 +153,11 @@ for clust in sorted(set(t_cell_harmonized.obs["leiden_labels"]), key = int) :
 top_gene_df = pd.DataFrame(dict([(k,pd.Series(v)) for k,v in top_genes.items() ]))
 top_gene_df = top_gene_df.rename(columns = {clust : "cluster_{clust}".format(clust=clust) for clust in top_genes.keys()})
 top_gene_df = top_gene_df.replace(np.nan, "")
-top_gene_df
+```
+
+```{r show_auc}
+library(knitr)
+kable(reticulate::py$top_gene_df, caption = "genes with AUC > 0.75")
 ```
 
 We can see from the above AUROC genes, that we don't have a strong enough signal from some clusters to get a good sense
@@ -262,8 +257,11 @@ for clust in sorted(set(t_cell_harmonized.obs["leiden_labels"]), key = int) :
 top_gene_df = pd.DataFrame(dict([(k,pd.Series(v)) for k,v in top_genes.items() ]))
 top_gene_df = top_gene_df.rename(columns = {clust : "cluster_{clust}".format(clust=clust) for clust in top_genes.keys()})
 top_gene_df = top_gene_df.replace(np.nan, "")
-top_gene_df
 
+```
+
+```{r, show_auc_and_pseudo}
+kable(reticulate::py$top_gene_df, caption = "genes with AUC> 0.75 or pseudo q < 0.05")
 ```
 
 Now with the AUROC and OVA marker genes, we can visualize the markers with a heatmap.  First, we looked at the data with
@@ -336,7 +334,6 @@ axDivY2 = divider.append_axes( 'right', size=0.2, pad= 0.2)
 axDivY3 = divider.append_axes( 'right', size=0.2, pad= 0.2)
 axDivY4 = divider.append_axes( 'top', size=0.2, pad= 0.2)
 
-# color_label_list =[random.randint(0,14) for i in range(14)]
 ax1 = sns.clustermap(heatmap_df, method = "ward", row_cluster =True, col_cluster =True, z_score = 0, cmap = "vlag")
 col_order = np.array([name.split("_")[-1] for name in ax1.data2d.columns])
 index = [sorted_cols.index(gene_val_dict[clust]) for clust in col_order]
@@ -357,7 +354,7 @@ plt.show()
 ```
 
 To make things more readable, we also made a heatmap where we kept the columns clustered such that phenotypically
-similar clusters were grouped together, but manually ordered the rows to make it more readable.
+similar clusters were grouped together, but manually ordered the rows.
 
 
 ```{python ordered_heatmap}
@@ -379,7 +376,6 @@ annot_genes = annot_genes.append(n_heatmap_genes)
 annot_genes = annot_genes.reset_index()
 annot_genes = annot_genes.fillna('')
 
-# annot_genes.to_csv(os.path.join(file_path(), "data", "heatmap_info", "t_cell_harmonized_annotation_genes.csv"))
 
 # Get the mean expression of the top genes from each cluster
 de_df = {"mean_log_{clust}".format(clust = clust) : t_cell_harmonized.varm["de_res"]["mean_logExpr:{clust}".format(clust = clust)] for clust in sorted(set(t_cell_harmonized.obs["leiden_labels"]), key = int)}
@@ -414,10 +410,7 @@ col_order = np.array([name.split("_")[-1] for name in ax1.data2d.columns])
 index = [sorted_cols.index(gene_val_dict[clust]) for clust in col_order]
 plt.close()
 
-# Write the current heatmap data out, want to try making the heatmap in R where it might look nicer
-# ax1.data2d.to_csv(os.path.join(file_path(), "data", "heatmap_info", "t_cell_harmonized_heatmap_data.csv"))
 heatmap_carpet = ax1.data2d
-
 
 ax1 = sns.heatmap(ax1.data2d, cmap = "vlag", ax = ax, cbar_ax = axDivY)
 ax2 = axDivY2.imshow(np.array([[min(gene_val_list), max(gene_val_list)]]), cmap = mpl.colors.ListedColormap(list(colors)),
@@ -526,7 +519,7 @@ draw(heatmap_list, heatmap_legend_list =lgd_list, padding = unit(c(0.5, 0.5, 2, 
 
 ```
 
-**Differential abundance analysis
+#Differential abundance analysis
 
 To determine which clusters were associated with particular group at a given condition, we used a mixed-effects
 association logistic regression model similar to that described by Fonseka et al.  We fit a logistic regression model
@@ -674,5 +667,144 @@ cl_order <- c(9, 7, 3, 1, 5, 6, 8, 10, 2, 4)
 plot_df$cluster <- factor(plot_df$cluster, levels = rev(cl_order))
 plot_df$sample <- factor(plot_df$sample, levels = c("Pre", "Dil", "Ag"))
 plot_contrasts(plot_df)
+
+```
+
+The most noticable thing in terms of differences between AA and AC are the Th2 cells.  Even more interestingly, the IL9
+expression in the Th2 cells is almost exclusively in the AA as shown below.
+
+
+```{python, il9_plot}
+
+cmap_dict = {"AA" : clr.LinearSegmentedColormap.from_list('gene_cmap', ["#d3d3d3" ,'#FF8000'], N=200),
+             "ANA" : clr.LinearSegmentedColormap.from_list('gene_cmap', ["#d3d3d3" ,'#40007F'], N=200)}
+
+il9_fig, ax = plt.subplots(nrows = 1, ncols = 2, figsize = (10, 3))
+ax = ax.ravel()
+for num, pheno in enumerate(["AA", "ANA"]) :
+    pheno_dat = t_cell_harmonized[t_cell_harmonized.obs["phenotype"] == pheno]
+    _ = sc.pl.umap(pheno_dat, color = "IL9", cmap = cmap_dict[pheno], show = False, ax = ax[num],
+               title = pheno)
+_ = il9_fig.suptitle("IL9 expression")
+il9_fig
+```
+
+We can look at the other Th2 genes in feature plots to show they really have a pathogenic effector phenotype
+```{python, th2_plot}
+
+colormap = clr.LinearSegmentedColormap.from_list('gene_cmap', ["#e0e0e1", '#4576b8', '#02024a'], N=200)
+
+feature_genes = ["IL4", "IL5", "IL9", "IL13", "IL17RB", "HPGDS",
+                 "PTGDR2", "IL1RL1", "GATA3", "PPARG", "IRF4",
+                 "IL1RL1"]
+
+fig, ax = plt.subplots(nrows = 4, ncols = 3, figsize = (7, 7))
+ax = ax.ravel()
+for num, gene in enumerate(feature_genes) :
+    _ = sc.pl.umap(t_cell_harmonized, color=gene, cmap=colormap, show=False, ax = ax[num], title = gene)
+fig.tight_layout()
+fig
+
+```
+
+# Differential expression analysis
+
+Next, we wanted to know which genes were differentially expressed between AA and AC at Ag.  For this, we used ```DESeq2```
+on the pseudobulk count matrix.  We used a simple model of ```gene ~ phenotype``` where phenotype was a factor with 2
+levels indicating the phenotypical group the sample came from.  There were not too many significant genes, however the
+ones that came out were interesting.  For example, in the Th2 cells, we see IL2RA and CTLA4 were up-regulated in the AA.
+All significant genes we found were up-regulated in the AA.
+
+```{r de_res, warning = FALSE, message = FALSE}
+library(DESeq2)
+library(glue)
+
+count_mtx <- as.matrix(read.csv("/home/nealpsmith/projects/medoff/data/pseudobulk_t_cell_harmonized_counts.csv", row.names = 1))
+meta_data <- read.csv("/home/nealpsmith/projects/medoff/data/pseudobulk_t_cell_harmonized_meta.csv", row.names = 1)
+meta_data$phenotype <- factor(meta_data$phenotype, levels = c("ANA", "AA"))
+
+# Limit to just Ag samples
+meta_data <- meta_data[meta_data$sample == "Ag",]
+count_mtx <- count_mtx[,rownames(meta_data)]
+
+de_list <- list()
+for (clust in unique(meta_data$cluster)){
+  clust_meta <-meta_data[meta_data$cluster == clust,]
+  clust_count <- count_mtx[,rownames(clust_meta)]
+    if (nrow(clust_meta) > 5){
+
+      n_samp <- rowSums(clust_count != 0)
+      clust_count <- clust_count[n_samp > round(nrow(clust_meta) / 2),]
+
+      stopifnot(rownames(clust_meta) == colnames(clust_count))
+
+      dds <- DESeqDataSetFromMatrix(countData = clust_count,
+                                    colData = clust_meta,
+                                    design = ~phenotype)
+      dds <- DESeq(dds)
+      res <- results(dds)
+      plot_data <- as.data.frame(res)
+      plot_data <- plot_data[!is.na(plot_data$padj),]
+      plot_data$gene <- rownames(plot_data)
+      de_list[[glue("clust_{clust}")]] <- plot_data
+    }
+
+}
+
+aa_up <- lapply(names(de_list), function(x){
+    data <- de_list[[x]]
+    up_aa <- data[data$padj < 0.1 & data$log2FoldChange > 0,]$gene
+    up_ana <- data[data$padj < 0.1 & data$log2FoldChange < 0,]$gene
+    info_df <- data.frame("gene" = up_aa)
+    if (nrow(info_df) > 0){
+      info_df$cluster <- x
+    }
+  return(info_df)
+  }) %>%
+    do.call(rbind, .)
+
+aa_up
+```
+
+To visualize these, we used violin plots comparing the AA and AC expression distributions in the particular clusters
+
+```{python de_violins}
+t_cell_ag = t_cell_harmonized[t_cell_harmonized.obs["sample"] == "Ag"]
+
+plot_info = pd.DataFrame({"gene" : ["IL2RA", "CTLA4", "MAL", "GZMB", "CCR7", "SOCS3"],
+                          "clust" : ["8", "8", "2", "5", "3", "3"]})
+
+fig, ax = plt.subplots(ncols=plot_info.shape[0], figsize = (12, 2))
+ax = ax.ravel()
+
+for num, indx in enumerate(plot_info.index.values) :
+    gene = plot_info.loc[indx, "gene"]
+    in_clust = plot_info.loc[indx, "clust"]
+    t_cell_gene_data = pd.DataFrame.sparse.from_spmatrix(t_cell_ag[:, gene].X, columns=[gene],
+                                                      index=t_cell_ag.obs_names).sparse.to_dense()
+    t_cell_gene_data = t_cell_gene_data.merge(t_cell_ag.obs[["id", "phenotype", "leiden_labels"]], how="left",
+                                        left_index=True, right_index=True)
+    t_cell_gene_data = t_cell_gene_data[t_cell_gene_data["leiden_labels"] == in_clust]
+
+    # Get medians
+    medians = [np.median(t_cell_gene_data[t_cell_gene_data["phenotype"] == "AA"][gene]),
+               np.median(t_cell_gene_data[t_cell_gene_data["phenotype"] == "ANA"][gene])]
+
+    # Make the plot
+    sns.violinplot(x="phenotype", y=gene, hue="phenotype", data=t_cell_gene_data, inner=None,
+                   palette={"AA": "#FF8000", "ANA": "#40007F"}, ax=ax[num], cut=0, alpha=0.5, dodge = False)
+    for violin in ax[num].collections:
+        violin.set_alpha(0.5)
+    sns.stripplot(x="phenotype", y=gene, hue="phenotype", data=t_cell_gene_data,
+                  palette={"AA": "grey", "ANA": "grey"},
+                  dodge=False, size=2, ax=ax[num], zorder=0)
+    # ax[num].scatter(x = [0, 1], y = medians, marker = "_", s = 600, c = "black")
+    _ = ax[num].get_legend().remove()
+    _ = ax[num].set_xlabel("")
+    _ = ax[num].set_ylabel("log(CPM)")
+    _ = ax[num].set_title(f"{gene} : t_cell {in_clust}")
+
+fig.tight_layout()
+fig
 
 ```
